# 15-puzzle-game-cpp

./: CMakeLists.txt  Makefile  build.bat  main.cpp
include/: game.hpp  input_taker.hpp  renderer.hpp
src/: game.cpp  renderer.cpp
